Fixed namings in the qulron backend